--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
 						border-radius: 0;
 			  }
 			}
+			
+			.allowResize {
+				resize:both;
+				overflow:auto;
+			}
 		</style>
 		<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 		<!--[if lt IE 9]>
@@ -196,7 +201,7 @@
 					</div><!--/.well -->
 				</div><!--/span-->
 				<div class="span9">
-				<div class="modal hide fadein" id="uploadModal">
+				<div class="modal hide fadein allowResize" id="uploadModal">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal">×</button>
 						<h3>Modal header</h3>
@@ -223,7 +228,7 @@
 						<li class="active">Data</li>
 					</ul>
 				<!--/div-->
-				<table class="table table-striped table-bordered table-condensed">
+				<table class="table table-striped table-bordered table-condensed allowResize">
 					<thead>
 						<tr>
 							<th>name</th>
