added resize to nav

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 		<div class="container-fluid">
 			<div class="row-fluid">
 				<div class="span3">
-					<div class="well sidebar-nav">
+					<div class="well sidebar-nav allowResize">
 						<ul class="nav nav-list">
 							<li class="nav-header">Sidebar</li>
 							<li class="active"><a href="#">Link</a></li>
@@ -217,18 +217,17 @@
 				<div class="alert alert-success">
 					Uploaded documents successfully!
 				</div>
-				<!--div class="subnav" id="subnav"-->
-					<ul class="breadcrumb" id="subnav">
-						<li>
-							<a href="#">Home</a> <span class="divider">/</span>
-						</li>
-						<li>
-							<a href="#">Library</a> <span class="divider">/</span>
-						</li>
-						<li class="active">Data</li>
-					</ul>
-				<!--/div-->
-				<table class="table table-striped table-bordered table-condensed allowResize">
+
+				<ul class="breadcrumb" id="subnav">
+					<li>
+						<a href="#">Home</a> <span class="divider">/</span>
+					</li>
+					<li>
+						<a href="#">Library</a> <span class="divider">/</span>
+					</li>
+					<li class="active">Data</li>
+				</ul>
+				<table class="table table-striped table-bordered table-condensed">
 					<thead>
 						<tr>
 							<th>name</th>
