added important for css

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 			}
 			
 			.allowResize {
-				resize:both;
-				overflow:auto;
+				resize:both !important;
+				overflow:auto !important;
 			}
 		</style>
 		<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
