--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 					</div><!--/.well -->
 				</div><!--/span-->
 				<div class="span9">
-				<div class="modal hide fadein allowResize" id="uploadModal">
+				<div class="modal hide fadein" id="uploadModal">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal">×</button>
 						<h3>Modal header</h3>
@@ -214,7 +214,7 @@
 						<a href="#" class="btn btn-primary">Save changes</a>
 					</div>
 				</div>
-				<div class="alert alert-success">
+				<div class="alert alert-success allowResize">
 					Uploaded documents successfully!
 				</div>
 
