--- a/index.html
+++ b/index.html
@@ -382,6 +382,7 @@
 		</div>
 
 		<script src="assets/js/jquery.js"></script>
+		<script src="assets/js/jquery-ui.custom.min.js"></script>
 		<script src="assets/js/bootstrap-transition.js"></script>
 		<script src="assets/js/bootstrap-alert.js"></script>
 		<script src="assets/js/bootstrap-modal.js"></script>
