--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 			}
 		</style>
 		<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+		<link href="assets/css/jquery-ui.custom.css" rel="stylesheet">
 		<!--[if lt IE 9]>
 		  <script src="assets/js/html5shiv.js"></script>
 		<![endif]-->
