added metro site

--- a/metro.html
+++ b/metro.html
@@ -116,6 +116,7 @@
 			}
 		</style>
 		<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+		<link href="assets/css/jquery-ui.custom.css" rel="stylesheet">
 		<!--[if lt IE 9]>
 		  <script src="assets/js/html5shiv.js"></script>
 		<![endif]-->
@@ -382,6 +383,7 @@
 		</div>
 
 		<script src="assets/js/jquery.js"></script>
+		<script src="assets/js/jquery-ui.custom.min.js"></script>
 		<script src="assets/js/bootstrap-transition.js"></script>
 		<script src="assets/js/bootstrap-alert.js"></script>
 		<script src="assets/js/bootstrap-modal.js"></script>
