added metro site

--- a/metro.html
+++ b/metro.html
@@ -8,6 +8,7 @@
 		<meta name="author" content="Daniel Manzke">
 
 		<!-- Le styles -->
+		<link href="assets/css/bootstrap.css" rel="stylesheet">
 		<link href="assets/css/metro-ui-bootstrap.css" rel="stylesheet">
 		<style type="text/css">
 			body {
