added metro site

--- a/metro.html
+++ b/metro.html
@@ -9,7 +9,7 @@
 
 		<!-- Le styles -->
 		<link href="assets/css/bootstrap.css" rel="stylesheet">
-		<link href="assets/css/metro-ui-bootstrap.css" rel="stylesheet">
+		<link href="assets/css/metrojs.css" rel="stylesheet">
 		<style type="text/css">
 			body {
 				padding-top: 60px;
@@ -375,16 +375,72 @@
 				</div>
 			</div><!--/row-->
 		</div><!--/span-->
-  </div><!--/row-->
+	</div><!--/row-->
 		
-		
-			<footer class="footer">
-				<p class="pull-right"><a href="#">Back to top</a></p>
-			</footer>
+	
+			<footer class="appbar">
+			   <nav>
+				  <ul id="menu" class="appbar-buttons">
+					  <li>
+						  <a href="#" class="home"><img src="/images/1pixel.gif" alt="home" /></a>
+						  <span class="charm-title">Home</span>
+					  </li>
+					  <li>
+						  <a href="#" class="about"><img src="/images/1pixel.gif" alt="about" /></a>
+						  <span class="charm-title">About</span>
+					  </li>
+					  <li>
+						  <a href="#" target="_blank" class="twitter"><img src="/images/1pixel.gif" alt="twitter" /></a>
+						  <span class="charm-title">Twitter</span>
+					  </li>
+				  </ul>
+			  </nav>
+			  <a class="etc">&bull;&bull;&bull;</a>
+			  <ul class="theme-options clear">
+				  <li>
+					  <a class="accent blue" href="javascript:;"> </a>
+				  </li>
+				  <li>
+					  <a class="accent brown" href="javascript:;"> </a>
+				  </li>
+				  <li>
+					  <a class="accent green" href="javascript:;"> </a>
+				  </li>
+				  <li>
+					  <a class="accent lime" href="javascript:;"> </a>
+				  </li>
+				  <li>
+					  <a class="accent magenta" href="javascript:;"> </a>
+				  </li>
+				  <li>
+					  <a class="accent mango" href="javascript:;"> </a>
+				  </li>
+				  <li>
+					  <a class="accent pink" href="javascript:;"> </a>
+				  </li>
+				  <li>
+					  <a class="accent purple" href="javascript:;"> </a>
+				  </li>
+				  <li>
+					  <a class="accent red" href="javascript:;"> </a>
+				  </li>
+				  <li>
+					  <a class="accent teal" href="javascript:;"> </a>
+				  </li>
+			  </ul>
+			  <ul class="base-theme-options clear">
+				  <li>
+					  <a class="accent light" href="javascript:;"> </a>
+				  </li>
+				  <li>
+					  <a class="accent dark" href="javascript:;"> </a>
+				  </li>
+			  </ul>
+		  </footer>
 		</div>
 
 		<script src="assets/js/jquery.js"></script>
-		<script src="assets/js/jquery-ui.custom.min.js"></script>
+		<script src="assets/js/metrojs.js"></script>
 		<script src="assets/js/bootstrap-transition.js"></script>
 		<script src="assets/js/bootstrap-alert.js"></script>
 		<script src="assets/js/bootstrap-modal.js"></script>
