fixed path to 1 pixel

--- a/metro.html
+++ b/metro.html
@@ -382,15 +382,15 @@
 			   <nav>
 				  <ul id="menu" class="appbar-buttons">
 					  <li>
-						  <a href="#" class="home"><img src="/assets/img/1pixel.gif" alt="home" /></a>
+						  <a href="#" class="home"><img src="assets/img/1pixel.gif" alt="home" /></a>
 						  <span class="charm-title">Home</span>
 					  </li>
 					  <li>
-						  <a href="#" class="about"><img src="/assets/img/1pixel.gif" alt="about" /></a>
+						  <a href="#" class="about"><img src="assets/img/1pixel.gif" alt="about" /></a>
 						  <span class="charm-title">About</span>
 					  </li>
 					  <li>
-						  <a href="#" target="_blank" class="twitter"><img src="/assets/img/1pixel.gif" alt="twitter" /></a>
+						  <a href="#" target="_blank" class="twitter"><img src="assets/img/1pixel.gif" alt="twitter" /></a>
 						  <span class="charm-title">Twitter</span>
 					  </li>
 				  </ul>
