--- a/metro.html
+++ b/metro.html
@@ -146,7 +146,7 @@
 						<span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu">
-							<li><a href="#"><i class="icon-cog"></i> Profile</a></li>
+							<li><a href="#passwordModal" data-toggle="modal"><i class="icon-cog"></i> Profile</a></li>
 							<li class="divider"></li>
 							<li><a href="#"><i class="icon-off"></i> Sign Out</a></li>
 						</ul>
@@ -210,6 +210,36 @@
 						</div>
 						<div class="modal-body">
 							<p>One fine body...</p>
+						</div>
+						<div class="modal-footer">
+							<a href="#" class="btn" data-dismiss="modal">Close</a>
+							<a href="#" class="btn btn-primary">Save changes</a>
+						</div>
+					</div>
+					<div class="modal hide fadein" id="passwordModal">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal">×</button>
+							<h3>Password Changer</h3>
+						</div>
+						<div class="modal-body">
+							<div class="password-container">
+								<p>
+									<label>Enter Password:</label>
+									<input class="strong-password" type="password" />
+								</p>
+								<p>
+									<label>Confirm Password:</label>
+									<input class="strong-password" type="password" />
+								</p>
+								<p>
+									<a class="submit-button locked" href="#">Submit</a>
+								</p>
+								<div class="strength-indicator">
+									<div class="meter"></div>
+									Strong passwords contain 8-16 characters, do not include common words or names,
+									and combine uppercase letters, lowercase letters, numbers, and symbols.
+								</div>
+							</div>
 						</div>
 						<div class="modal-footer">
 							<a href="#" class="btn" data-dismiss="modal">Close</a>
@@ -395,46 +425,6 @@
 				</ul>
 			</nav>
 			<a class="etc">&bull;&bull;&bull;</a>
-			<ul class="theme-options clear">
-				<li>
-					<a class="accent blue" href="javascript:;"> </a>
-				</li>
-				<li>
-					<a class="accent brown" href="javascript:;"> </a>
-				</li>
-				<li>
-					<a class="accent green" href="javascript:;"> </a>
-				</li>
-				<li>
-					<a class="accent lime" href="javascript:;"> </a>
-				</li>
-				<li>
-					<a class="accent magenta" href="javascript:;"> </a>
-				</li>
-				<li>
-					<a class="accent mango" href="javascript:;"> </a>
-				</li>
-				<li>
-					<a class="accent pink" href="javascript:;"> </a>
-				</li>
-				<li>
-					<a class="accent purple" href="javascript:;"> </a>
-				</li>
-				<li>
-					<a class="accent red" href="javascript:;"> </a>
-				</li>
-				<li>
-					<a class="accent teal" href="javascript:;"> </a>
-				</li>
-			</ul>
-			<ul class="base-theme-options clear">
-				<li>
-					<a class="accent light" href="javascript:;"> </a>
-				</li>
-				<li>
-					<a class="accent dark" href="javascript:;"> </a>
-				</li>
-			</ul>
 		</footer>
 
 		<script src="assets/js/jquery.js"></script>
@@ -489,6 +479,7 @@
 					metroLightUrl: 'img/metroIcons_light.jpg',
 					metroDarkUrl: 'img/metroIcons.jpg'
 				}); 
+				$('.password-container').pschecker({ onPasswordValidate: validatePassword, onPasswordMatch: matchPassword });
 			});
 		</script>
 	</body
