--- a/metro.html
+++ b/metro.html
@@ -429,6 +429,7 @@
 
 		<script src="assets/js/jquery.js"></script>
 		<script src="assets/js/metrojs.js"></script>
+		<script src="assets/js/pschecker.js"></script>
 		<script src="assets/js/bootstrap-transition.js"></script>
 		<script src="assets/js/bootstrap-alert.js"></script>
 		<script src="assets/js/bootstrap-modal.js"></script>
