--- a/metro.html
+++ b/metro.html
@@ -10,6 +10,7 @@
 		<!-- Le styles -->
 		<link href="assets/css/bootstrap.css" rel="stylesheet">
 		<link href="assets/css/metrojs.css" rel="stylesheet">
+		<link href="assets/css/pschecker.css" rel="stylesheet">
 		<style type="text/css">
 			body {
 				padding-top: 60px;
@@ -231,9 +232,6 @@
 									<label>Confirm Password:</label>
 									<input class="strong-password" type="password" />
 								</p>
-								<p>
-									<a class="submit-button locked" href="#">Submit</a>
-								</p>
 								<div class="strength-indicator">
 									<div class="meter"></div>
 									Strong passwords contain 8-16 characters, do not include common words or names,
@@ -243,7 +241,7 @@
 						</div>
 						<div class="modal-footer">
 							<a href="#" class="btn" data-dismiss="modal">Close</a>
-							<a href="#" class="btn btn-primary">Save changes</a>
+							<a href="#" class="btn btn-primary locked">Save changes</a>
 						</div>
 					</div>
 					<div class="alert alert-success allowResize">
