added password checker

--- a/metro.html
+++ b/metro.html
@@ -232,11 +232,11 @@
 									<label>Confirm Password:</label>
 									<input class="strong-password" type="password" />
 								</p>
-								<div class="strength-indicator">
+								<!--div class="strength-indicator"-->
 									<div class="meter"></div>
 									Strong passwords contain 8-16 characters, do not include common words or names,
 									and combine uppercase letters, lowercase letters, numbers, and symbols.
-								</div>
+								<!--/div-->
 							</div>
 						</div>
 						<div class="modal-footer">
