--- a/metro.html
+++ b/metro.html
@@ -206,7 +206,7 @@
 				<div class="span9">
 					<div class="modal hide fadein" id="uploadModal">
 						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal">×</button>
+							<button type="button" class="close" data-dismiss="modal">x</button>
 							<h3>Modal header</h3>
 						</div>
 						<div class="modal-body">
@@ -219,7 +219,7 @@
 					</div>
 					<div class="modal hide fadein" id="passwordModal">
 						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal">×</button>
+							<button type="button" class="close" data-dismiss="modal">x</button>
 							<h3>Password Changer</h3>
 						</div>
 						<div class="modal-body">
